# sqlitepp

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md
include/: sqlite3_inc.h  sqlitepp.h  sqlitepp_db.h  sqlitepp_stmt.h
sqlite3/: CMakeLists.txt
src/: CMakeLists.txt  sqlitepp_db.cpp  sqlitepp_stmt.cpp
